2017.2/_sources/plugins/available/diversity/filter_distance_matrix.txt
filter_distance_matrix: Filter samples from a distance matrix.
==============================================================

Filter samples from a distance matrix, retaining only the samples matching search criteria specified by `sample_metadata` and `where` parameters. See the filtering tutorial on https://docs.qiime2.org for additional details.

.. raw:: html

   <table class="table action-signature">
     
     <thead>
       <tr>
         <th colspan="4">Inputs</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
         <th>Description</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">distance_matrix</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">DistanceMatrix</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Required</span>
           </code>
         </td>
         
         <td>
           
           Distance matrix to filter by sample.<br/>
           
         </td>
       </tr>
       
     </tbody>
     
     <thead>
       <tr>
         <th colspan="4">Parameters</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
         <th>Description</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">sample_metadata</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Metadata</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Required</span>
           </code>
         </td>
         
         <td>
           
           Sample metadata used in conjuction with `where` parameter to select samples to retain<br/>
           
         </td>
       </tr>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">where</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Str</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">None</span>
           </code>
         </td>
         
         <td>
           
           SQLite WHERE clause specifying sample metadata criteria that must be met to be included in the filtered distance matrix. If not provided, all samples in `sample_metadata` that are also in the input distance matrix will be retained.<br/>
           
         </td>
       </tr>
       
     </tbody>
     
     <thead>
       <tr>
         <th colspan="4">Outputs</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
         <th>Description</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">filtered_distance_matrix</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">DistanceMatrix</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">N/A</span>
           </code>
         </td>
         
         <td>
           
           Distance matrix filtered to include samples matching search criteria<br/>
           
         </td>
       </tr>
       
     </tbody>
     
   </table>